force-app/main/default/objects/Service_Contract__c/fields/Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Value__c</fullName>
    <label>Annual Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>