force-app/main/default/objects/Service_Contract__c/fields/AutoRenewal__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Renewal</label>
    <type>Checkbox</type>
</CustomField>