force-app/main/default/objects/Service_Contract__c/fields/Contract_Margin__c.field-meta.xml
<CustomField>
    <fullName>Contract_Margin__c</fullName>
    <label>Contract Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>