force-app/main/default/objects/Service_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preventive Maintenance</fullName>
            </value>
            <value>
                <fullName>Full Coverage</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Performance/Outcome-Based</fullName>
            </value>
            <value>
                <fullName>Energy Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>