force-app/main/default/objects/Service_Contract__c/fields/Coverage_Scope__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Scope__c</fullName>
    <label>Coverage Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Equipment at Account</fullName>
            </value>
            <value>
                <fullName>Specific Sites</fullName>
            </value>
            <value>
                <fullName>Specific Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>