force-app/main/default/objects/Service_Contract__c/fields/Includes_Emergency_Service__c.field-meta.xml
<CustomField>
    <fullName>Includes_Emergency_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Emergency Service</label>
    <type>Checkbox</type>
</CustomField>