force-app/main/default/objects/Service_Contract__c/fields/Number_of_PM_Visits_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PM_Visits_Per_Year__c</fullName>
    <label>Number of PM Visits Per Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>