force-app/main/default/objects/Service_Contract__c/fields/Renewal_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Date__c</fullName>
    <formula>End_Date__c - Renewal_Notice_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Notice Date</label>
    <type>Date</type>
</CustomField>