force-app/main/default/objects/Service_Contract__c/fields/Renewal_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Renewal Notice Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>