force-app/main/default/objects/Service_Contract__c/fields/Renewal_Probability__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Probability__c</fullName>
    <label>Renewal Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very High (90%+)</fullName>
            </value>
            <value>
                <fullName>High (70-89%)</fullName>
            </value>
            <value>
                <fullName>Medium (40-69%)</fullName>
            </value>
            <value>
                <fullName>Low (10-39%)</fullName>
            </value>
            <value>
                <fullName>At Risk (&lt;10%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>