force-app/main/default/objects/Service_Contract__c/fields/Response_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Response_SLA_Hours__c</fullName>
    <label>Response SLA (Hours)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>